# practice-book-rust-servers-services-apps

./: .gitignore  README.md
ch02/scenario-1/: Cargo.toml
ch02/scenario-1/http/: Cargo.toml
ch02/scenario-1/http-server/: Cargo.toml
ch02/scenario-1/http-server/src/: main.rs
ch02/scenario-1/http/src/: http_request.rs  http_response.rs  library.rs
ch02/scenario-1/http_server/: Cargo.toml
ch02/scenario-1/http_server/public/: 404.html  health.html  styles.css
ch02/scenario-1/http_server/src/: handler.rs  main.rs  router.rs  server.rs
ch02/scenario-1/tcp-client/: Cargo.toml
ch02/scenario-1/tcp-client/src/: main.rs
ch02/scenario-1/tcp-server/: Cargo.toml
ch02/scenario-1/tcp-server/src/: main.rs
ch03/ezytutors/: Cargo.toml
ch03/ezytutors/tutor-nodb/: Cargo.toml
ch03/ezytutors/tutor-nodb/src/: handlers.rs  routes.rs  state.rs
ch04/ezytutors-i1/: Cargo.toml
ch04/ezytutors-i1/tutor-db/src/: main.rs
ch04/ezytutors-i1/tutor-nodb/src/: routes.rs
ch04/ezytutors-i2/tutor-db/src/: database.sql  handlers.rs  main.rs
ch04/ezytutors-i3/tutor-db/src/: db_access.rs  handlers.rs  main.rs
ch05/ezytutors-i4/tutor-db/src/: db_access.rs  errors.rs  handlers.rs  main.rs
ch05/ezytutors-i4/tutor-nodb/src/: handlers.rs
ch05/ezytutors/tutor-db/: Cargo.toml
ch05/ezytutors/tutor-db/src/: database.sql  handlers.rs  models.rs  routes.rs
ch05/ezytutors/tutor-nodb/src/: models.rs  state.rs
ch06/ezytutors/tutor-db/: Cargo.toml
ch06/ezytutors/tutor-db/src/: errors.rs  routes.rs
ch06/ezytutors/tutor-db/src/db_access/: course.rs  tutor.rs
ch06/ezytutors/tutor-db/src/db_scripts/: course.sql  db-create.sql  seed.sql  tutor.sql
ch06/ezytutors/tutor-db/src/handlers/: course.rs  tutor.rs
ch06/ezytutors/tutor-db/src/models/: course.rs  tutor.rs
ch06/ezytutors/tutor-nodb/src/: handlers.rs
ch07/ezytutors-iter-0/tutor-web-app-ssr/src/: main.rs
ch07/ezytutors-iter-0/tutor-web-service/src/: routes.rs
ch07/ezytutors-iter-0/tutor-web-service/src/db_access/: tutor.rs
ch07/ezytutors-iter-1/tutor-web-app-ssr/src/: main.rs
ch07/ezytutors-iter-1/tutor-web-app-ssr/static/: static-web-page.html
ch07/ezytutors-iter-2/: Cargo.toml
ch07/ezytutors-iter-2/tutor-web-app-ssr/: Cargo.toml
ch07/ezytutors-iter-2/tutor-web-app-ssr/src/: main.rs
ch07/ezytutors-iter-2/tutor-web-service/: Cargo.toml
ch07/ezytutors-iter-2/tutor-web-service/src/db_scripts/: db-create.sql
ch07/ezytutors-iter-3/tutor-web-app-ssr/src/: main.rs
ch07/ezytutors-iter-3/tutor-web-app-ssr/static/: list.html  styles.css
ch07/ezytutors-iter-3/tutor-web-service/src/handlers/: course.rs
ch07/ezytutors-iter-4/tutor-web-app-ssr/: Cargo.toml
ch07/ezytutors-iter-4/tutor-web-app-ssr/src/: main.rs
ch07/ezytutors-iter-4/tutor-web-app-ssr/static/: index.html  user.html
ch07/ezytutors/tutor-web-app-ssr/: Cargo.toml
ch07/ezytutors/tutor-web-service/src/: state.rs
ch07/ezytutors/tutor-web-service/src/handlers/: general.rs
ch08/ezytutors/tutor-web-app-ssr/: Cargo.toml
ch08/ezytutors/tutor-web-app-ssr/src/: errors.rs  main.rs
ch08/ezytutors/tutor-web-app-ssr/src/db_scripts/: db-create.sql  user.sql
ch08/ezytutors/tutor-web-app-ssr/static/: form.html  list.html  register.html
ch08/ezytutors/tutor-web-service/: Cargo.toml
ch08/ezytutors/tutor-web-service/src/db_scripts/: course.sql  (+1 more)
ch09/ezytutors/tutor-web-app-ssr/: Cargo.toml
ch09/ezytutors/tutor-web-app-ssr/static/: register.html  signin.html  tutor-styles.css  user.html
ch10/async-hello/: Cargo.toml
ch10/async-hello/src/: main.rs
