[package]
name = "tutor-db"
version = "0.1.0"
rust-version = "1.66.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.2.*" }
actix-rt = { version = "2.7.*" }
dotenvy = { version = "0.15.6" }
sqlx = { version = "0.6.* ", default_features = false, features = [
  "postgres",
  "runtime-actix-native-tls",
  "macros",
  "chrono",
] }

serde = { version = "1.0.*", features = ["derive"] }
chrono = { version = "0.4.*", features = ["serde"] }
openssl = { version = "0.10.*", features = ["vendored"] }